# chip8-emulator

./: CMakeLists.txt
inc/: chip8.h  font.h  io.h  log.h
src/: chip8.c  io.c  main.c
